Further improve BDD codegen